Thymeleaf page rendering

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
     <title>Home Page</title>
 </head>
 <body>
+<!--In Thymeleaf, th: is a namespace prefix used for attribute modifications and expressions that allow you to manipulate the content and behavior of HTML tags. It provides a way to seamlessly integrate dynamic data and logic into your HTML templates.-->
 <h1 th:text="${message}">Welcome to the Home Page ThymeLeaf!</h1>
 </body>
 </html>
